--- a/revinter.html
+++ b/revinter.html
@@ -23,7 +23,7 @@
         <div class="menu-items">
           <a href="https://www.youtube.com/watch?v=LZgeIReY04c&list=PL6WHJUJ5a3FmDPxntvFlzU_v_kKkSOQDs&index=27">CONTACT</a></div>
         <div class="menu-items">
-          <a href="/html/visit.html">PLAN YOUR VISIT</a></div>
+          <a href="/visit.html">PLAN YOUR VISIT</a></div>
     </div>
 </header>
 
