--- a/visit.html
+++ b/visit.html
@@ -98,7 +98,7 @@
     <ul id="regionpics">
       <li><img src="/images/mappac.jpeg"></li>
       <li><img src="/images/mapinter.jpeg"></li>
-      <li> <img src="/images/mapinter.jpeg"></li>
+      <li> <img src="/images/mapmidw.jpeg"></li>
       <li><img src="/images/mapsouth.jpeg"></li>
       <li><img src="/images/mapnorth.jpeg"></li>
     </ul>
