--- a/visit.html
+++ b/visit.html
@@ -42,7 +42,7 @@
           <div class="col-7 col-sm-8">
             <div class="card-body" id="visit" style="height:100%;">
               <h3 class="visit">VISIT</h3>
-              <p class="card-text" style="height:100%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="card-text" style="height:100%;">Visiting the national parks is an amazing way to reconnect with nature, explore breathtaking landscapes, and create unforgettable memories with family and friends. These protected areas offer a wide range of activities, from hiking and camping to kayaking and wildlife watching. They also provide an opportunity to learn about the environment, history, and culture of the region. By visiting the national parks, we can escape the hustle and bustle of everyday life and experience the beauty and wonder of the natural world firsthand. Plus, it's just plain fun!.</p>
             </div>
           </div>
         </div>
