--- a/home.html
+++ b/home.html
@@ -50,11 +50,11 @@
     <div class="wrapper">
         <div class="content-1">
             <ul>
-                <li><img src="regions/pacificwest.jpg"></li>
-                <li><img src="regions/intermountain.jpg"></li>
-                <li><img src="regions/midwest.jpg"></li>
-                <li><img src="regions/southeast.jpg"></li>
-                <li><img src="regions/northeast.jpg"></li>
+                <li><img src="pacificwest.jpg"></li>
+                <li><img src="intermountain.jpg"></li>
+                <li><img src="midwest.jpg"></li>
+                <li><img src="southeast.jpg"></li>
+                <li><img src="northeast.jpg"></li>
             </ul>
             <ul class="lista">
                 <li>Pacific West</li>
