--- a/olivialkey.github.io copy/intermountain.html
+++ b/olivialkey.github.io copy/intermountain.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale-1, shrink-to-fit=no">
     <title>Final Project</title>
-    <link href="CSS/style.css" rel="stylesheet"></link>
+    <link href="CSS/intermountain.css" rel="stylesheet"></link>
 </head>
 
 <body>
     <header class="header box">
         <div class="navbar">
-            <div class="menu-items"><a href="https://www.youtube.com/watch?v=eBGIQ7ZuuiU">HOME</a></div>
-            <div class="menu-items"><a href="https://www.youtube.com/watch?v=LZgeIReY04c&list=PL6WHJUJ5a3FmDPxntvFlzU_v_kKkSOQDs&index=27">MAILING LIST</a></div>
-            <div class="menu-items"><a href="https://www.youtube.com/watch?v=FGXBoFfo6F0&list=PL6WHJUJ5a3FmDPxntvFlzU_v_kKkSOQDs&index=50">PLAN YOUR VISIT</a></div>
+            <div class="menu-items"><a href="home.html">HOME</a></div>
+            <div class="menu-items"><a href="home.html">MAILING LIST</a></div>
+            <div class="menu-items"><a href="visit.html">PLAN YOUR VISIT</a></div>
         </div>
     </header>
     <div class="container">
