--- a/revinter.html
+++ b/revinter.html
@@ -21,7 +21,7 @@
         <div class="menu-items">
           <a href="/index.html">HOME</a></div>
         <div class="menu-items">
-          <a href="https://www.youtube.com/watch?v=LZgeIReY04c&list=PL6WHJUJ5a3FmDPxntvFlzU_v_kKkSOQDs&index=27">CONTACT</a></div>
+          <a href="home.html">MAILING LIST</a></div>
         <div class="menu-items">
           <a href="/visit.html">PLAN YOUR VISIT</a></div>
     </div>
@@ -63,7 +63,7 @@
     <!--grand teton-->
     <div class="col">
       <div class="card">
-        <img src="/images/teton.jpeg"" class="card-img-top" alt="card-grid-image">
+        <img src="images/teton.jpeg" class="card-img-top" alt="card-grid-image">
         <div class="card-body">
           <h5 class="card-title">Grand Teton National Park</h5>
           <p class="card-text">Known for its towering peaks and pristine lakes, this park offers endless opportunities for outdoor adventure. From hiking and skiing to fishing and wildlife viewing, visitors can experience the best of the natural world in this stunning wilderness.</p>
