--- a/visit.html
+++ b/visit.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link href="/stylesheet.css" rel="stylesheet">
+    <link href="stylesheet.css" rel="stylesheet">
 
     <!--icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -24,11 +24,11 @@
   <header class="header-box">
     <div class="navbar">
         <div class="menu-items">
-          <a href="/index.html">HOME</a></div>
+          <a href="home.html">HOME</a></div>
         <div class="menu-items">
-          <a href="https://www.youtube.com/watch?v=LZgeIReY04c&list=PL6WHJUJ5a3FmDPxntvFlzU_v_kKkSOQDs&index=27">CONTACT</a></div>
+          <a href="home.html"><Main>MAILING LIST</Main></a></div>
         <div class="menu-items">
-          <a href="/html/visit.html">PLAN YOUR VISIT</a></div>
+          <a href="visit.html">PLAN YOUR VISIT</a></div>
     </div>
 </header>
 
