--- a/pacificwest.html
+++ b/pacificwest.html
@@ -22,7 +22,7 @@
         </div>
         <div class="region-content">
             <div class="content-container">
-                <img src="images/intermountain.jpg" alt="intermountain map" id="img-1">
+                <img src="images/mappac.jpeg" alt="pacifc west map" id="img-1">
                 <div class="text-container">
                     <p id="content-text">The Pacific West region of the National Parks System encompasses some of the most stunning and diverse natural landscapes in the United States. This region includes iconic parks such as Yosemite, Olympic, and Mount Rainier, as well as lesser-known gems like North Cascades and Lassen Volcanic. Each park in the Pacific West region offers its own unique features, from towering granite cliffs to geothermal hot springs, from snow-capped mountains to lush rainforests. Visitors to these parks can experience a range of outdoor activities, including hiking, camping, fishing, and wildlife watching. The Pacific West region of the National Parks System is a testament to the beauty and diversity of the American landscape and a source of inspiration for all who visit.</p>
                 </div>
