--- a/midwest.html
+++ b/midwest.html
@@ -22,9 +22,9 @@
         </div>
         <div class="region-content">
             <div class="content-container">
-                <img src="images/mappac.jpeg" alt="pacifc west map" id="img-1">
+                <img src="images/mapmidw.jpeg" alt="pacifc west map" id="img-1">
                 <div class="text-container">
-                    <p id="content-text">The Pacific West region of the National Parks System encompasses some of the most stunning and diverse natural landscapes in the United States. This region includes iconic parks such as Yosemite, Olympic, and Mount Rainier, as well as lesser-known gems like North Cascades and Lassen Volcanic. Each park in the Pacific West region offers its own unique features, from towering granite cliffs to geothermal hot springs, from snow-capped mountains to lush rainforests. Visitors to these parks can experience a range of outdoor activities, including hiking, camping, fishing, and wildlife watching. The Pacific West region of the National Parks System is a testament to the beauty and diversity of the American landscape and a source of inspiration for all who visit.</p>
+                    <p id="content-text">The Midwest region of the National Parks System may not be as well-known as some of the other regions, but it offers visitors a chance to explore the unique landscapes and rich history of America's heartland. This region includes parks such as Isle Royale, Theodore Roosevelt, and Indiana Dunes, each with its own distinct character and natural beauty. Isle Royale, located in the northern reaches of Lake Superior, is a remote wilderness area accessible only by boat or seaplane, while Theodore Roosevelt offers visitors the opportunity to step back in time and explore the rugged badlands that inspired the 26th President. The Indiana Dunes, located on the southern shore of Lake Michigan, feature towering sand dunes, lush forests, and pristine beaches. Together, these parks showcase the diversity and resilience of the Midwest's natural and cultural heritage and offer visitors a chance to experience the region's unique character firsthand.</p>
                 </div>
             </div>
         </div>
@@ -36,10 +36,10 @@
             <h1>MOST POPULAR PARKS</h1>
             <div class="park-links-container">
                 <ul>
-                    <li>1. Death Valley National Park</li>
-                    <li>2. Hawaii Volcanoes National Park</li>
-                    <li>3. Joshua Tree National Park</li>
-                    <li>4. Mount Rainier National Park</li>
+                    <li>1. Badlands National Park</li>
+                    <li>2. Isle Royale National Park</li>
+                    <li>3. Hot Springs National Park</li>
+                    <li>4. Wind Cave National Park</li>
                 </ul>
             </div>
         </div>
