--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         National Parks
     </title>
     <!-- The following link points to a stylesheet called "stylesheet.css".-->
-    <link href="home.css" rel="stylesheet"
+    <link href="CSS/home.css" rel="stylesheet"
     type="text/css">
     <meta name="viewport" 
     content="width=device-width, 
@@ -50,19 +50,11 @@
     <div class="wrapper">
         <div class="content-1">
             <ul>
-<<<<<<< Updated upstream
-                <li><img src="pacificwest.jpg"></li>
-                <li><img src="intermountain.jpg"></li>
-                <li><img src="midwest.jpg"></li>
-                <li><img src="southeast.jpg"></li>
-                <li><img src="northeast.jpg"></li>
-=======
-                <li><img src="images/mappac.jpeg" alt="pacific northwest"></li>
-                <li><img src="images/mapinter.jpeg" alt="intermountain"></li>
-                <li><img src="images/mapmidw.jpeg" alt="midwest"></li>
-                <li><img src="images/mapsouth.jpeg" alt="southeast"></li>
-                <li><img src="images/"></li>
->>>>>>> Stashed changes
+                <li><img src="images/mappac.jpeg" alt="pacific west map"></li>
+                <li><img src="images/intermountain_map.jpg" alt="intermountain map"></li>
+                <li><img src="images/mapmidw.jpeg" alt="midwest map"></li>
+                <li><img src="images/mapsouth.jpeg" alt="southeast map"></li>
+                <li><img src="images/mapnorth.jpeg" alt="northeast map"></li>
             </ul>
             <ul class="lista">
                 <li>Pacific West</li>
