--- a/midwest.html
+++ b/midwest.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale-1, shrink-to-fit=no">
     <title>Final Project</title>
-    <link href="CSS/intermountain.css" rel="stylesheet"></link>
+    <link href="CSS/midwest.css" rel="stylesheet"></link>
 </head>
 
 <body>
