--- a/home.html
+++ b/home.html
@@ -50,12 +50,13 @@
     <div class="wrapper">
         <div class="content-1">
             <ul>
-                <li><img src="images/mappac.jpeg" alt="pacific west map"></li>
-                <li><img src="images/intermountain_map.jpg" alt="intermountain map"></li>
-                <li><img src="images/mapmidw.jpeg" alt="midwest map"></li>
-                <li><img src="images/mapsouth.jpeg" alt="southeast map"></li>
-                <li><img src="images/mapnorth.jpeg" alt="northeast map"></li>
+                <li><a href="pacificwest.html"><img src="images/mappac.jpeg" alt="pacific west map"></a></li>
+                <li><a href="intermountain.html"><img src="images/intermountain_map.jpg" alt="intermountain map"></a></li>
+                <li><a href="midwest.html"><img src="images/mapmidw.jpeg" alt="midwest map"></a></li>
+                <li><a href="southeast.html"><img src="images/mapsouth.jpeg" alt="southeast map"></a></li>
+                <li><a href="northeast.html"><img src="images/mapnorth.jpeg" alt="northeast map"></a></li>
             </ul>
+    
             <ul class="lista">
                 <li>Pacific West</li>
                 <li>Intermountain</li>
