--- a/southeast.html
+++ b/southeast.html
@@ -11,8 +11,8 @@
 <body>
     <header class="header box">
         <div class="navbar">
-            <div class="menu-items"><a href="https://www.youtube.com/watch?v=eBGIQ7ZuuiU">HOME</a></div>
-            <div class="menu-items"><a href="https://www.youtube.com/watch?v=LZgeIReY04c&list=PL6WHJUJ5a3FmDPxntvFlzU_v_kKkSOQDs&index=27">MAILING LIST</a></div>
+            <div class="menu-items"><a href="home.html">HOME</a></div>
+            <div class="menu-items"><a href="home.html">MAILING LIST</a></div>
             <div class="menu-items"><a href="visit.html">PLAN YOUR VISIT</a></div>
         </div>
     </header>
