--- a/pacificnw.html
+++ b/pacificnw.html
@@ -33,41 +33,41 @@
     <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
             <div class="card">
-            <img src="northeast/acadia(maine).jpeg" class="card-img-top" alt="card-grid-image">
+            <img src="pfnw/craterlake.jpeg" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
-                <h5 class="card-title">Acadia National Park</h5>
-                <p class="card-text">Located in Maine, this park offers scenic vistas of rugged coastline, granite peaks, and pristine lakes. Visitors can enjoy hiking, biking, camping, and a variety of water-based activities.</p>
+                <h5 class="card-title">Crater Lake National Park</h5>
+                <p class="card-text">Crater Lake National Park is located in southern Oregon and is known for its stunningly clear blue lake, which is the deepest in the United States. The lake was formed by the collapse of a volcano over 7,000 years ago.</p>
             </div>
             </div>
         </div>
         <!--zion-->
         <div class="col">
             <div class="card">
-            <img src="northeast/shenandoah.jpeg" class="card-img-top" alt="card-grid-image">
+            <img src="pfnw/greatbasin.jpeg" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
-                <h5 class="card-title">Shenandoah National Park</h5>
-                <p class="card-text">Situated in Virginia, this park features the scenic Blue Ridge Mountains and the famous Skyline Drive. The park offers hiking trails, campgrounds, and stunning views of the Shenandoah Valley.</p>
+                <h5 class="card-title">Great Basin National Park</h5>
+                <p class="card-text">Great Basin National Park is located in eastern Nevada and features a diverse range of natural landscapes, including ancient bristlecone pine forests, underground caves, and the majestic Wheeler Peak. It is a popular destination for hiking, stargazing, and exploring the unique ecology of the Great Basin region.</p>
             </div>
             </div>
         </div>
         <!--yellowstone-->
         <div class="col">
             <div class="card">
-            <img src="northeast/delawarewatergap.jpeg" class="card-img-top" alt="card-grid-image">
+            <img src="pfnw/hawaii.webp" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
-                <h5 class="card-title">Delaware Water Gap National Park</h5>
+                <h5 class="card-title">Hawaii Volcanoes National Park</h5>
                 <p class="card-text">
-                    Located on the border of Pennsylvania and New Jersey, the Delaware Water Gap offers visitors the chance to hike, swim, boat, and fish in a stunning natural setting.</p>
+                    Hawaii Volcanoes National Park is located on the Big Island of Hawaii and is home to two of the world's most active volcanoes, Kilauea and Mauna Loa. Visitors can witness lava flows, hike through lush rainforests, and explore volcanic craters and steam vents in this unique and ever-changing landscape.</p>
             </div>
             </div>
         </div>
         <!--grand teton-->
         <div class="col">
             <div class="card">
-            <img src="northeast/capecod.png"" class="card-img-top" alt="card-grid-image">
+            <img src="pfnw/joshuatree.jpeg"" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
-                <h5 class="card-title">Cape Cod National Park</h5>
-                <p class="card-text"> This Massachusetts park is famous for its sandy beaches, dunes, and salt marshes. Visitors can explore historic lighthouses, bike along scenic paths, and observe a variety of wildlife.</p>
+                <h5 class="card-title">Joshua Tree National Park</h5>
+                <p class="card-text">Joshua Tree National Park is located in southern California and is named after the iconic Joshua trees that grow throughout the park. The park's unique desert landscape is popular among hikers, rock climbers, and stargazers, with numerous trails and rock formations to explore.</p>
             </div>
             </div>
         </div>
