--- a/midwest-rev.html
+++ b/midwest-rev.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
     <!-- Custom CSS -->
-    <link href="pacificnw.css" rel="stylesheet">
+    <link href="midwest-rev.css" rel="stylesheet">
     
     <!--icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -33,41 +33,41 @@
     <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
             <div class="card">
-            <img src="pfnw/craterlake.jpeg" class="card-img-top" alt="card-grid-image">
+            <img src="midwest/isleyroyale.jpeg" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
-                <h5 class="card-title">Crater Lake National Park</h5>
-                <p class="card-text">Crater Lake National Park is located in southern Oregon and is known for its stunningly clear blue lake, which is the deepest in the United States. The lake was formed by the collapse of a volcano over 7,000 years ago.</p>
+                <h5 class="card-title">Isley Royale National Park</h5>
+                <p class="card-text">Located on an island in Lake Superior, this park offers remote wilderness, rugged coastlines, and opportunities for backpacking, camping, fishing, and wildlife viewing.</p>
             </div>
             </div>
         </div>
         <!--zion-->
         <div class="col">
             <div class="card">
-            <img src="pfnw/greatbasin.jpeg" class="card-img-top" alt="card-grid-image">
+            <img src="midwest/voyagerus.jpeg" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
-                <h5 class="card-title">Great Basin National Park</h5>
-                <p class="card-text">Great Basin National Park is located in eastern Nevada and features a diverse range of natural landscapes, including ancient bristlecone pine forests, underground caves, and the majestic Wheeler Peak. It is a popular destination for hiking, stargazing, and exploring the unique ecology of the Great Basin region.</p>
+                <h5 class="card-title">Voyageurs National Park</h5>
+                <p class="card-text">Consisting of four large lakes and more than 900 smaller ones, this park is popular for boating, fishing, and exploring the waterways by canoe or kayak.</p>
             </div>
             </div>
         </div>
         <!--yellowstone-->
         <div class="col">
             <div class="card">
-            <img src="pfnw/hawaii.webp" class="card-img-top" alt="card-grid-image">
+            <img src="midwest/cuyahoga.webp" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
-                <h5 class="card-title">Hawaii Volcanoes National Park</h5>
+                <h5 class="card-title">Cuayhoga Valley National Park</h5>
                 <p class="card-text">
-                    Hawaii Volcanoes National Park is located on the Big Island of Hawaii and is home to two of the world's most active volcanoes, Kilauea and Mauna Loa. Visitors can witness lava flows, hike through lush rainforests, and explore volcanic craters and steam vents in this unique and ever-changing landscape.</p>
+                    With a mix of forests, wetlands, and rolling hills, this park offers scenic hiking and biking trails, waterfalls, and historic landmarks like the Ohio & Erie Canal.</p>
             </div>
             </div>
         </div>
         <!--grand teton-->
         <div class="col">
             <div class="card">
-            <img src="pfnw/joshuatree.jpeg"" class="card-img-top" alt="card-grid-image">
+            <img src="midwest/indianadunes.jpeg"" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
-                <h5 class="card-title">Joshua Tree National Park</h5>
-                <p class="card-text">Joshua Tree National Park is located in southern California and is named after the iconic Joshua trees that grow throughout the park. The park's unique desert landscape is popular among hikers, rock climbers, and stargazers, with numerous trails and rock formations to explore.</p>
+                <h5 class="card-title">Indiana Dunes National Park</h5>
+                <p class="card-text">Situated on the southern shore of Lake Michigan, this park features towering sand dunes, sandy beaches, and diverse habitats like forests, wetlands, and prairies, making it a great destination for hiking, swimming, and birdwatching.</p>
             </div>
             </div>
         </div>
