--- a/home.html
+++ b/home.html
@@ -44,29 +44,23 @@
             </p>
         </div>
     </content>
-    <div>
-        <h3 class="regions">The Different Regions</h3>
+
+   <!--regions-->
+<div class="region">
+    <div class="container2">
+      <h4> The Different Regions</h4>
+      <div class="list">
+        <ul id="regionpics">
+          <li><img src="/images/mappac.jpeg"></li>
+          <li><img src="/images/mapinter.jpeg"></li>
+          <li> <img src="/images/mapmidw.jpeg"></li>
+          <li><img src="/images/mapsouth.jpeg"></li>
+          <li><img src="/images/mapnorth.jpeg"></li>
+        </ul>
+      </div>
     </div>
-    <div class="wrapper">
-        <div class="content-1">
-            <ul>
-                <li><a href="pacificwest.html"><img src="images/mappac.jpeg" alt="pacific west map"></a></li>
-                <li><a href="intermountain.html"><img src="images/intermountain_map.jpg" alt="intermountain map"></a></li>
-                <li><a href="midwest.html"><img src="images/mapmidw.jpeg" alt="midwest map"></a></li>
-                <li><a href="southeast.html"><img src="images/mapsouth.jpeg" alt="southeast map"></a></li>
-                <li><a href="northeast.html"><img src="images/mapnorth.jpeg" alt="northeast map"></a></li>
-            </ul>
-    
-            <ul class="lista">
-                <li>Pacific West</li>
-                <li>Intermountain</li>
-                <li>Midwest</li>
-                <li>Southeast</li>
-                <li>Northeast</li>
-            </ul>
-        </div>
-    </div>
-    <div>
+</div>
+
         <h3 class="learn">LEARN MORE</h3>
     </div>
     <div class="forum">
