--- a/home.html
+++ b/home.html
@@ -45,21 +45,22 @@
         </div>
     </content>
 
-   <!--regions-->
+<!--regions-->
 <div class="region">
     <div class="container2">
-      <h4> The Different Regions</h4>
-      <div class="list">
-        <ul id="regionpics">
-          <li><img src="/images/mappac.jpeg"></li>
-          <li><img src="/images/mapinter.jpeg"></li>
-          <li> <img src="/images/mapmidw.jpeg"></li>
-          <li><img src="/images/mapsouth.jpeg"></li>
-          <li><img src="/images/mapnorth.jpeg"></li>
-        </ul>
-      </div>
+        <h4> The Different Regions</h4>
+        <div class="list">
+            <ul id="regionpics">
+                <li><a href="pacificwest.html"><img src="images/mappac.jpeg" alt="pacific west map"></a></li>
+                <li><a href="intermountain.html"><img src="images/mapinter.jpeg" alt="intermountain map"></a></li>
+                <li><a href="midwest.html"><img src="images/mapmidw.jpeg" alt="midwest map"></a></li>
+                <li><a href="southeast.html"><img src="images/mapsouth.jpeg" alt="southeast map"></a></li>
+                <li><a href="northeast.html"><img src="images/mapnorth.jpeg" alt="northeast map"></a></li>
+            </ul>
+        </div>
     </div>
 </div>
+
 
         <h3 class="learn">LEARN MORE</h3>
     </div>
