--- a/home.html
+++ b/home.html
@@ -51,11 +51,12 @@
       <h4> The Different Regions</h4>
       <div class="list">
         <ul id="regionpics">
-            <li><img src="/images/mappac.jpeg" title="Pacific Region"></li>
-            <li><img src="/images/mapinter.jpeg" title="Intermountain Region"></li>
-            <li><img src="/images/mapmidw.jpeg" title="Midwest Region"></li>
-            <li><img src="/images/mapsouth.jpeg" title="Southern Region"></li>
-            <li><img src="/images/mapnorth.jpeg" title="Northern Region"></li>
+            <li><a href="/pacific.html"><img src="/images/mappac.jpeg" title="Pacific Region"></a></li>
+            <li><a href="/intermountain.html"><img src="/images/mapinter.jpeg" title="Intermountain Region"></a></li>
+            <li><a href="/midwest.html"><img src="/images/mapmidw.jpeg" title="Midwest Region"></a></li>
+            <li><a href="/southeast.html"><img src="/images/mapsouth.jpeg" title="Southern Region"></a></li>
+            <li><a href="/northeast.html"><img src="/images/mapnorth.jpeg" title="Northern Region"></a></li>
+          </ul>
         </ul>
       </div>
     </div>
