--- a/pacificwest.html
+++ b/pacificwest.html
@@ -29,8 +29,8 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="button">REVIEWS</button>
-            <button class="button">PARKS</button>
+            <a href="pacificnw-rev.html"><button class="button">REVIEWS</button></a>
+            <a href="https://www.nps.gov/orgs/1180/visit.htm"><button class="button">PARKS</button></a>
         </div>
         <div class="most-popular-parks">
             <h1>MOST POPULAR PARKS</h1>
