--- a/southeast.html
+++ b/southeast.html
@@ -29,8 +29,8 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="button">REVIEWS</button>
-            <button class="button">PARKS</button>
+            <a href="southeast-rev.html"><button class="button">REVIEWS</button></a>
+            <a href="https://nationalparkobsessed.com/destinations/north-america/united-states/southeast-region/"><button class="button">PARKS</button></a>
         </div>
         <div class="most-popular-parks">
             <h1>MOST POPULAR PARKS</h1>
