--- a/intermountain.html
+++ b/intermountain.html
@@ -29,9 +29,9 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="button">REVIEWS</button>
-            <button class="button">PARKS</button>
-        </div>
+            <a href="revinter.html"><button class="button">REVIEWS</button></a>
+            <a href="https://www.nps.gov/orgs/1072/visit-the-parks.htm"><button class="button">PARKS</button></a>
+        </div>        
         <div class="most-popular-parks">
             <h1>MOST POPULAR PARKS</h1>
             <div class="park-links-container">
