--- a/northeast-rev.html
+++ b/northeast-rev.html
@@ -19,11 +19,11 @@
         <header class="header-box">
         <div class="navbar">
             <div class="menu-items">
-                <a href="/index.html">HOME</a></div>
+                <a href="home.html">HOME</a></div>
             <div class="menu-items">
-                <a href="https://www.youtube.com/watch?v=LZgeIReY04c&list=PL6WHJUJ5a3FmDPxntvFlzU_v_kKkSOQDs&index=27">CONTACT</a></div>
+                <a href="home.html">CONTACT</a></div>
             <div class="menu-items">
-                <a href="/html/visit.html">PLAN YOUR VISIT</a></div>
+                <a href="visit.html">PLAN YOUR VISIT</a></div>
         </div>
     </header>
     
