--- a/revinter.html
+++ b/revinter.html
@@ -7,7 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 <!-- Custom CSS -->
-<link href="/stylesheet3.css" rel="stylesheet">
+<link href="CSS/stylesheet3.css" rel="stylesheet">
 
 <!--icons-->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -19,11 +19,11 @@
   <header class="header-box">
     <div class="navbar">
         <div class="menu-items">
-          <a href="/index.html">HOME</a></div>
+          <a href="home.html">HOME</a></div>
         <div class="menu-items">
           <a href="home.html">MAILING LIST</a></div>
         <div class="menu-items">
-          <a href="/visit.html">PLAN YOUR VISIT</a></div>
+          <a href="visit.html">PLAN YOUR VISIT</a></div>
     </div>
 </header>
 
