--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         <h3 class="history">HISTORY</h3>
     </div>
     <content class="content">
-        <div class="logo"></div>
+        <div class="logo" title="NPS logo"></div>
         <div class="text-container">
             <p class="text">
                 National parks are areas of protected land designated by the government to conserve and preserve natural and cultural resources for future generations. The concept of national parks originated in the United States in the mid-19th century, when concerns about the impact of human activity on natural environments began to arise. The establishment of Yellowstone National Park in 1872 as the world's first national park marked the beginning of the modern national park system. The creation of national parks in the United States was part of a larger movement to protect natural areas, which also included the establishment of national forests and wildlife refuges.
@@ -51,11 +51,11 @@
       <h4> The Different Regions</h4>
       <div class="list">
         <ul id="regionpics">
-            <li><a href="/pacific.html"><img src="/images/mappac.jpeg" title="Pacific Region"></a></li>
+            <li><a href="/pacific.html" title="Pacific Region"><img src="/images/mappac.jpeg" alt="map of the pacific west region"></a></li>
             <li><a href="/intermountain.html"><img src="/images/mapinter.jpeg" title="Intermountain Region"></a></li>
             <li><a href="/midwest.html"><img src="/images/mapmidw.jpeg" title="Midwest Region"></a></li>
-            <li><a href="/southeast.html"><img src="/images/mapsouth.jpeg" title="Southern Region"></a></li>
-            <li><a href="/northeast.html"><img src="/images/mapnorth.jpeg" title="Northern Region"></a></li>
+            <li><a href="/southeast.html"><img src="/images/mapsouth.jpeg" title="Southeast Region"></a></li>
+            <li><a href="/northeast.html"><img src="/images/mapnorth.jpeg" title="Northeast Region"></a></li>
           </ul>
         </ul>
       </div>
