--- a/intermountain.html
+++ b/intermountain.html
@@ -22,7 +22,7 @@
         </div>
         <div class="region-content">
             <div class="content-container">
-                <img src="images/intermountain_map.jpg" alt="intermountain map" id="img-1">
+                <img src="images/intermountain_map.jpg" title="map intermountain region NPS" alt="intermountain map" id="img-1">
                 <div class="text-container">
                     <p id="content-text">The Intermountain Region of the National Parks System encompasses an area of incredible natural beauty that stretches from the Rocky Mountains to the deserts of the southwest. The region includes several iconic national parks, such as Yellowstone, Grand Teton, Zion, Bryce Canyon, and Arches. Visitors to the Intermountain Region can experience a diverse range of landscapes, including towering peaks, deep canyons, rugged deserts, and geothermal wonders. These parks offer a wealth of recreational opportunities, from hiking and camping to fishing and wildlife watching. The Intermountain Region is also home to many culturally significant sites, including ancient cliff dwellings and rock art, as well as important historical landmarks. With its stunning natural beauty and rich cultural heritage, the Intermountain Region of the National Parks System is a must-see destination for anyone interested in exploring the great outdoors and learning about the history and culture of the American West.</p>
                 </div>
