--- a/midwest-rev.html
+++ b/midwest-rev.html
@@ -33,7 +33,7 @@
     <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
             <div class="card">
-            <img src="midwest/isleyroyale.jpeg" class="card-img-top" alt="card-grid-image">
+            <img src="midwest/isleyroyale.jpeg" title="Isley Royale National Park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Isley Royale National Park</h5>
                 <p class="card-text">Located on an island in Lake Superior, this park offers remote wilderness, rugged coastlines, and opportunities for backpacking, camping, fishing, and wildlife viewing.</p>
@@ -43,7 +43,7 @@
         <!--zion-->
         <div class="col">
             <div class="card">
-            <img src="midwest/voyagerus.jpeg" class="card-img-top" alt="card-grid-image">
+            <img src="midwest/voyagerus.jpeg" title="voyagerus NP" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Voyageurs National Park</h5>
                 <p class="card-text">Consisting of four large lakes and more than 900 smaller ones, this park is popular for boating, fishing, and exploring the waterways by canoe or kayak.</p>
@@ -53,7 +53,7 @@
         <!--yellowstone-->
         <div class="col">
             <div class="card">
-            <img src="midwest/cuyahoga.webp" class="card-img-top" alt="card-grid-image">
+            <img src="midwest/cuyahoga.webp" title="cuayhoga NP" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Cuayhoga Valley National Park</h5>
                 <p class="card-text">
@@ -64,7 +64,7 @@
         <!--grand teton-->
         <div class="col">
             <div class="card">
-            <img src="midwest/indianadunes.jpeg"" class="card-img-top" alt="card-grid-image">
+            <img src="midwest/indianadunes.jpeg" title="Indiana Dunes national park" class="card-img-top" alt="card-grid-image">
             <div class="card-body">
                 <h5 class="card-title">Indiana Dunes National Park</h5>
                 <p class="card-text">Situated on the southern shore of Lake Michigan, this park features towering sand dunes, sandy beaches, and diverse habitats like forests, wetlands, and prairies, making it a great destination for hiking, swimming, and birdwatching.</p>
