--- a/midwest.html
+++ b/midwest.html
@@ -22,7 +22,7 @@
         </div>
         <div class="region-content">
             <div class="content-container">
-                <img src="images/mapmidw.jpeg" alt="pacifc west map" id="img-1">
+                <img src="images/mapmidw.jpeg" title="Midwest NPS map" alt="pacifc west map" id="img-1">
                 <div class="text-container">
                     <p id="content-text">The Midwest region of the National Parks System offers visitors a chance to explore a diverse array of parks that showcase the unique natural beauty and cultural heritage of the area. One notable park is Badlands National Park in South Dakota, which features striking rock formations and is home to a range of wildlife, including bighorn sheep and bison. The Indiana Dunes National Park, located on the southern shore of Lake Michigan, boasts sandy beaches and freshwater dunes. Other parks in the region include the Cuyahoga Valley National Park in Ohio, which features a scenic railroad and the historic Ohio & Erie Canal, and the Voyageurs National Park in Minnesota, which offers visitors the opportunity to explore a vast network of lakes and waterways. Overall, the Midwest region of the National Parks System provides visitors with a chance to immerse themselves in the natural wonders and rich history of the area.</p>
                 </div>
