--- a/northeast.html
+++ b/northeast.html
@@ -22,7 +22,7 @@
         </div>
         <div class="region-content">
             <div class="content-container">
-                <img src="images/mapnorth.jpeg" alt="pacifc west map" id="img-1">
+                <img src="images/mapnorth.jpeg" title="Northeast region NPS" alt="pacifc west map" id="img-1">
                 <div class="text-container">
                     <p id="content-text">The Northeast region of the National Parks System is a diverse and historic area, offering visitors a chance to explore a range of parks that highlight the region's natural beauty and cultural heritage. One of the most famous parks in the Northeast is Acadia National Park, which is located in Maine and features stunning coastal scenery, including granite peaks, rocky cliffs, and sandy beaches. Another notable park in the region is the Shenandoah National Park in Virginia, which is known for its scenic Skyline Drive and boasts a diverse array of wildlife, including black bears and white-tailed deer. Other parks in the Northeast include the Cape Cod National Seashore in Massachusetts, which features pristine beaches and sand dunes, and the Statue of Liberty National Monument in New York, which celebrates the enduring symbol of freedom and democracy. Overall, the Northeast region of the National Parks System offers visitors a chance to explore the natural and cultural wonders of the area and experience the unique history and character of the region.</p>
                 </div>
