--- a/revinter.html
+++ b/revinter.html
@@ -33,7 +33,7 @@
 <div class="row row-cols-1 row-cols-sm-2 g-3">
     <div class="col">
       <div class="card">
-        <img src="/images/grand.jpeg" class="card-img-top" alt="card-grid-image">
+        <img src="/images/grand.jpeg" title="Grand Canyon National Park" class="card-img-top" alt="card-grid-image">
         <div class="card-body">
           <h5 class="card-title">Grand Canyon National Park</h5>
           <p class="card-text">A natural wonder that attracts millions of visitors each year with its awe-inspiring views and hiking trails. The massive canyon offers a glimpse into the Earth's geological history, with stunning rock formations and vibrant colors that change throughout the day.</p>
@@ -43,7 +43,7 @@
     <!--zion-->
     <div class="col">
       <div class="card">
-        <img src="/images/zion.avif" class="card-img-top" alt="card-grid-image">
+        <img src="/images/zion.avif" title="Zion National Park" class="card-img-top" alt="card-grid-image">
         <div class="card-body">
           <h5 class="card-title">Zion National Park</h5>
           <p class="card-text">A breathtaking park that offers a variety of outdoor activities, including hiking, rock climbing, and river tubing. The park's towering cliffs and deep canyons provide stunning views at every turn, while its unique wildlife and vegetation make it a must-visit destination for nature lovers.</p>
@@ -53,7 +53,7 @@
     <!--yellowstone-->
     <div class="col">
       <div class="card">
-        <img src="/images/yw.jpg" class="card-img-top" alt="card-grid-image">
+        <img src="/images/yw.jpg" title="Yellowstone National Park" class="card-img-top" alt="card-grid-image">
         <div class="card-body">
           <h5 class="card-title">Yellowstone National Park</h5>
           <p class="card-text">America's first national park and a natural wonder that draws millions of visitors each year. Known for its geothermal features, including geysers and hot springs, as well as its diverse wildlife, such as bears, wolves, and bison. The park offers endless opportunities for exploration.</p>
@@ -63,7 +63,7 @@
     <!--grand teton-->
     <div class="col">
       <div class="card">
-        <img src="images/teton.jpeg" class="card-img-top" alt="card-grid-image">
+        <img src="images/teton.jpeg" title="Grant Teton National Park" class="card-img-top" alt="card-grid-image">
         <div class="card-body">
           <h5 class="card-title">Grand Teton National Park</h5>
           <p class="card-text">Known for its towering peaks and pristine lakes, this park offers endless opportunities for outdoor adventure. From hiking and skiing to fishing and wildlife viewing, visitors can experience the best of the natural world in this stunning wilderness.</p>
