--- a/southeast.html
+++ b/southeast.html
@@ -22,7 +22,7 @@
         </div>
         <div class="region-content">
             <div class="content-container">
-                <img src="images/mapsouth.jpeg" alt="pacifc west map" id="img-1">
+                <img src="images/mapsouth.jpeg" title="Southeast map NPS" alt="pacifc west map" id="img-1">
                 <div class="text-container">
                     <p id="content-text">The Southeast region of the National Parks System is a rich and diverse area, offering visitors a chance to explore a variety of parks that showcase the unique natural and cultural heritage of the region. One of the most popular parks in the Southeast is the Great Smoky Mountains National Park, which is located on the border between Tennessee and North Carolina and boasts stunning vistas, waterfalls, and a diverse range of wildlife. Another notable park in the region is the Everglades National Park in Florida, which is the largest subtropical wilderness in the United States and is home to an incredible array of flora and fauna, including the endangered Florida panther and American crocodile. Other parks in the Southeast include the Mammoth Cave National Park in Kentucky, which is home to the world's longest known cave system, and the Congaree National Park in South Carolina, which protects the largest intact expanse of old-growth bottomland hardwood forest in the United States. Overall, the Southeast region of the National Parks System offers visitors a chance to experience the unique natural wonders and rich cultural history of the area.</p>
                 </div>
