--- a/visit.html
+++ b/visit.html
@@ -96,11 +96,11 @@
   <h4> The Different Regions</h4>
   <div class="list">
     <ul id="regionpics">
-      <li><img src="/images/mappac.jpeg"></li>
-      <li><img src="/images/mapinter.jpeg"></li>
-      <li> <img src="/images/mapmidw.jpeg"></li>
-      <li><img src="/images/mapsouth.jpeg"></li>
-      <li><img src="/images/mapnorth.jpeg"></li>
+      <li><img src="/images/mappac.jpeg" title="Pacific Map"></li>
+      <li><img src="/images/mapinter.jpeg" title="Intermountain Map"></li>
+      <li> <img src="/images/mapmidw.jpeg" title="Midwest Map"></li>
+      <li><img src="/images/mapsouth.jpeg" title="Southeast Map"></li>
+      <li><img src="/images/mapnorth.jpeg" title="Northeast Map"></li>
     </ul>
   </div>
 </div>
